# datafaker

./: .buildinfo  .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CONTRIBUTING.md  Dockerfile  README.md  api.html  config-old.yaml  configuration.html  custom_generators.html  docker.html  duckdb.html  faq.html  genindex.html  glossary.html  health_data.html  index.html  installation.html  introduction.html  loan_data.html  mypy.ini  objects.inv  orm.html  overview.html  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  set_python314.cmd
.github/workflows/: docs.yml  pre-commit.yml  pubdocs.yml  publish.yml  tests.yml
_sources/: api.rst.txt  configuration.rst.txt  faq.rst.txt  health_data.rst.txt  introduction.rst.txt  loan_data.rst.txt  orm.rst.txt
_static/: custom.css
datafaker/: base.py  condition.py  create.py  dump.py  generators.py  install.py  interactive.py  main.py  make.py  parquet2orm.py  populate.py  providers.py  remove.py  serialize_metadata.py  settings.py  unique_generator.py  utils.py
datafaker/generators/: __init__.py  base.py  choice.py  continuous.py  mimesis.py  partitioned.py
datafaker/interactive/: __init__.py  base.py  generators.py  missingness.py  table.py
datafaker/json_schemas/: config_schema.json
datafaker/proposers/: __init__.py  base.py  choice.py  continuous.py  intervals.py  mimesis.py  partitioned.py
datafaker/templates/: datafaker.py.j2  df.py.j2
docs/source/: conf.py  configuration.rst  custom_generators.rst  docker.rst  duckdb.rst  glossary.rst  health_data.rst  index.rst  installation.rst  introduction.rst  loan_data.rst  orm.rst  overview.rst  quickstart.rst
docs/source/_static/: config_schema.html
examples/: README.md
examples/mimic_omop/: README.md  config.yaml  df.py  orm.yaml
examples/omop-mssql/: .env.example  README.md  config.yaml  df.py  orm.yaml  orm_full.yaml
examples/omop-mssql/sql/: copy_vocabulary.sql
examples/omop-postgresql/: README.md  config.yaml  config_template.yaml  df.py  orm.yaml
examples/procedure_clusters/: config.yaml  orm.yaml
examples/sequential_clustering/: README.md
examples/sequential_clustering/sql/: copy_vocabulary.sql
sqlsynthgen/: base.py  create.py  dump.py  generators.py  interactive.py  main.py  make.py  providers.py  remove.py  serialize_metadata.py  settings.py  utils.py
sqlsynthgen/json_schemas/: config_schema.json
sqlsynthgen/templates/: ssg.py.j2
tests/: test_base.py  test_condition.py  test_create.py  test_create_mssql.py  test_dump.py  test_functional.py  test_generators_dialect.py  test_install_stories.py  test_interactive.py  test_interactive_dialect.py  test_interactive_generators.py  test_interactive_generators_partitioned.py  test_interactive_missingness.py  test_interactive_table.py  test_main.py  test_make.py  test_noninteractive_generators.py  test_parquet2orm.py  test_providers.py  test_remove.py  test_rst.py  test_serialize_metadata_mssql.py  test_settings.py  test_unique_generator.py  test_utils.py  test_utils_mssql.py  utils.py
tests/examples/: annotated_stories.py  choice.sql  does-not-exist.yaml  dst.dump  eav.sql  empty.sql  example_config.yaml  example_config2.yaml  example_orm.yaml  expected_ssg.py  install_config.yaml  instrument.sql  orm.yaml  player.yaml  row_generators.py  src.dump  tricky.sql
tests/examples/duckdb/: config.yaml  manufacturer.parquet  model.parquet  orm.yaml  player.parquet  signature_model.parquet  spec.csv  string.parquet
